// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiRadio is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiRadio ouiRadio--noLabel testClass1 testClass2"
  data-test-subj="test subject string"
>
  <input
    class="ouiRadio__input"
    id="id"
    type="radio"
  />
  <div
    class="ouiRadio__circle"
  />
</div>
`;

exports[`OuiRadio props checked is rendered 1`] = `
<div
  class="ouiRadio ouiRadio--noLabel"
>
  <input
    checked=""
    class="ouiRadio__input"
    id="id"
    type="radio"
  />
  <div
    class="ouiRadio__circle"
  />
</div>
`;

exports[`OuiRadio props disabled is rendered 1`] = `
<div
  class="ouiRadio ouiRadio--noLabel"
>
  <input
    class="ouiRadio__input"
    disabled=""
    id="id"
    type="radio"
  />
  <div
    class="ouiRadio__circle"
  />
</div>
`;

exports[`OuiRadio props label is rendered 1`] = `
<div
  class="ouiRadio"
>
  <input
    class="ouiRadio__input"
    id="id"
    type="radio"
  />
  <div
    class="ouiRadio__circle"
  />
  <label
    class="ouiRadio__label"
    for="id"
  >
    <span>
      Label
    </span>
  </label>
</div>
`;

exports[`OuiRadio props labelProps is rendered 1`] = `
<div
  class="ouiRadio"
>
  <input
    class="ouiRadio__input"
    id="id"
    type="radio"
  />
  <div
    class="ouiRadio__circle"
  />
  <label
    aria-label="aria-label"
    class="ouiRadio__label testClass1 testClass2"
    data-test-subj="test subject string"
    for="id"
  >
    Label
  </label>
</div>
`;

exports[`OuiRadio props value is rendered 1`] = `
<div
  class="ouiRadio ouiRadio--noLabel"
>
  <input
    class="ouiRadio__input"
    id="id"
    type="radio"
    value="bobbins"
  />
  <div
    class="ouiRadio__circle"
  />
</div>
`;
